--- a/ProjectConfig.cmake.in
+++ b/ProjectConfig.cmake.in
@@ -2,4 +2,9 @@
 
 include("${CMAKE_CURRENT_LIST_DIR}/@CMAKE_PROJECT_NAME@Targets.cmake")
 
+include(CMakeFindDependencyMacro)
+foreach(dep @ARG_DEPENDENCIES@)
+  find_dependency(${dep})
+endforeach()
+
 check_required_components(@CMAKE_PROJECT_NAME@)
